remocao da connection string do appsettings

--- a/Aspnecore.GraphQL/Aspnecore.GraphQL.API/appsettings.Development.json
+++ b/Aspnecore.GraphQL/Aspnecore.GraphQL.API/appsettings.Development.json
@@ -30,7 +30,7 @@
     "NomeEmpresa": "Restoque",
     "UrlEmpresa": null,
     "TemAutenticacao": false,
-    "StringConexaoBancoDeDados": "Server=172.21.0.161;Initial Catalog=INT_LINX_WISE;Persist Security Info=False;User ID=linx;Password=linx;MultipleActiveResultSets=False;Encrypt=False;Connection Timeout=60;"
+    "StringConexaoBancoDeDados": ""
   },
   "HealthchecksConfiguration": {
     "TempoDePooling": 30,
